k8s/deploy-angular.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-deployment
  labels:
    app: angular-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angular-app
  template:
    metadata: 
      labels: 
        app: angular-app
    spec: 
      containers:
      - name: angular-app
        image: nouran10/myapp-frontend
        ports:
        - containerPort: 80
