k8s/deploy-spring.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-app
  template: 
    metadata: 
      labels:
        app: spring-app
    spec:
      containers:
      - name: spring-app
        image: nouran10/myapp-backend
        ports:
        - containerPort: 8081
