k8s/mysql-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
spec: 
  replicas: 2
  selector:
    matchLabels:
      app: mysql
  template: 
    metadata: 
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
        ports:
        - containerPort: 3306
        volumeMounts:
        - mountPath: "/var/lib/mysql"
          name: mypd
      volumes:
      - name: mypd
        persistentVolumeClaim:
          claimName: mysql-pvc
