k8s/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-app-service
spec: 
  type: NodePort
  selector: 
    app: spring-app
  ports:
  - name: http
    protocol: TCP
    port: 8081
    targetPort: 8081
    nodePort: 30801
